--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "motion": "^11.16.0",
     "next": "15.1.3",
     "react": "^19.0.0",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
