--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "24.5.2",
+    "@types/react": "19.1.15",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
